SERVER-71849 Named Pipes BF-26979 second fix: extend reader retry loop